--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -2,3 +2,4 @@ FROM almalinux:8
 LABEL TRAINING="DevOps" \
       TRAINER="Jaipal" \
       DURATION="120Hours"
+      org.opencontainers.image.authors="cherrireddy726@gmail.com"
