--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:8
 LABEL TRAINING="DevOps" \
       TRAINER="Jaipal" \
-      DURATION="120Hours"
+      DURATION="120Hours" \
       org.opencontainers.image.authors="cherrireddy726@gmail.com"
